--- a/backend/accounts-sevice/package.json
+++ b/backend/accounts-sevice/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "D": "^1.0.0",
+    "bcryptjs": "^2.4.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
@@ -22,6 +23,7 @@
     "sequelize": "^6.30.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/joi": "^17.2.3",
