--- a/backend/accounts-sevice/package.json
+++ b/backend/accounts-sevice/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "joi": "^17.8.4",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
     "sequelize": "^6.30.0"
   },
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.3",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.14",
