--- a/backend/contacts-service/package.json
+++ b/backend/contacts-service/package.json
@@ -1,42 +1,32 @@
 {
-  "name": "accounts-sevice",
+  "name": "contacts-service",
   "version": "1.0.0",
   "main": "index.js",
+  "author": "leo",
   "license": "MIT",
   "scripts": {
     "build": "tsc && node -r dotenv/config ./dist/server",
-    "start": "node -r dotenv/config  -r tsconfig-paths/register ./dist/server",
+    "start": "node -r dotenv/config  -r tsconfig-paths/register ./dist/contacts-server/src/server",
     "dev": "ts-node -r dotenv/config -r tsconfig-paths/register ./src/server",
-    "compile": "tsc && node -r dotenv/config -r tsconfig-paths/register ./dist/server",
-    "test": "jest",
-    "lint": "eslint --ext .ts .",
-    "lint:fix": "eslint --ext .ts . --fix"
+    "compile": "tsc && node -r dotenv/config -r tsconfig-paths/register ./dist/contacts-server/src/server",
+    "test": "jest"
   },
   "dependencies": {
-    "-": "^0.0.1",
-    "D": "^1.0.0",
-    "bcryptjs": "^2.4.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "joi": "^17.9.1",
-    "jsonwebtoken": "^9.0.0",
+    "joi": "^17.8.4",
     "mysql2": "^3.2.0",
     "sequelize": "^6.30.0",
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/joi": "^17.2.3",
-    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.3",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.14",
-    "eslint": "^8.36.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
     "jest": "^29.5.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
