--- a/backend/contacts-service/tsconfig.json
+++ b/backend/contacts-service/tsconfig.json
@@ -1,20 +1,21 @@
 {
-   "compilerOptions": {
-     "target": "es6",
-     "module": "commonjs",
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
      "outDir": "./dist/",
-     "rootDirs": ["./src/", "../__commons__/src"],
-     "strict": true,
-     "esModuleInterop": true,
-     "forceConsistentCasingInFileNames": true,
+    "strict": true,
      "moduleResolution": "node",
      "baseUrl": ".",
      "paths": {
        "ms-commons/*": ["../__commons__/src/*"]
      },
-   },
-   "exclude": [
-     "node_modules",
-     "__tests__"
-   ]
- }
+     "rootDirs": ["./src/", "../__commons__/src"], 
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
+  },
+  "exclude": ["__tests__"],
+  "ts-node": {
+    "transpileOnly": true
+  }
+}
