--- a/backend/__commons__/package.json
+++ b/backend/__commons__/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/joi": "^17.2.3",
@@ -19,6 +20,7 @@
     "typescript": "4.5.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "joi": "^17.9.1",
